--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo_acadprobot_square.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AcadChatbot</title>
+    <title>AcadProBot</title>
   </head>
   <body>
     <div id="root"></div>
